# comp0034_tutorialapp_fastapi

./: README.md  pyproject.toml
.github/: test-week8.yml
.github/workflows/: main.yml  test-all.yml
alembic/: env.py
alembic/versions/: 15824da71a3b_create_initial_migration.py  6ddd1fd34303_1_initial_migration.py  6f24d8a6edb7_2_add_user.py  ec273343a396_3_remove_user_fullname.py
src/backend/: main.py
src/backend/core/: config.py  db.py  deps.py  security.py
src/backend/models/: models.py  schemas.py
src/backend/models/other_versions/: models.py  schemas_pydantic.py  schemas_sqlmodel.py
src/backend/routes/: auth_router.py  games_router.py  quiz_router.py
src/backend/services/: auth_service.py  games_service.py  quiz_service.py
src/data/: paralympics.db  paralympics.xlsx  test_paralympics.db
src/paralympics/: charts.py  paralympics_dashboard.py
src/paralympics/.streamlit/: config.toml
src/paralympics/pages/: teacher_admin.py
tests/: conftest.py
tests/backend/: conftest.py  test_auth_router.py  test_auth_service.py  test_games_router.py  test_quiz_router.py
tests/frontend/: conftest.py  test_paralympics_playwright.py  test_paralympics_st.py  test_teacher_admin.py
